<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">
    <item
        android:id="@+id/go_to_menu"
        android:icon="@drawable/menu"
        android:orderInCategory="100"
        android:title="@string/title_menu"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/add_album"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/album_add_album"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/add_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/track_add_track"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_album_to_artist"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/album_add_album"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/add_comentario"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/album_add_comentario"
        android:visible="false"
        app:showAsAction="always"/>
</menu>