...
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:actionBarNavMode="standard"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/Theme.VinilosApplication.PopupOverlay"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_main"
...
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/collector"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:fitsSystemWindows="true"
        app:defaultNavHost="true"
...
